# SolveMate

./: .gitignore  Dockerfile  docker-compose.yaml  manage.py  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml
SolveMate/: asgi.py  settings.py  urls.py  wsgi.py
SolveMate/api_docs/: swagger.py
SolveMate/helpers/: custom_model_viewsets.py  exception_handlers.py  response_helpers.py
account/: fixtures.py  models.py  serializers.py  tests.py  views.py
account/api/: serializers.py  views.py
account/migrations/: 0001_initial.py
account/services/: kako_oauth_service.py  token_service.py
account/services/user/: services.py
challenge/: conftest.py  models.py  serializers.py  tests.py  views.py
challenge/api/: serializers.py  views.py
challenge/migrations/: 0001_initial.py  0002_problem_problem_id.py  0003_alter_challengeday_unique_together_and_more.py
challenge/services/: service.py
challenge/services/group/: services.py
